Change app name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
       or implied. See the License for the specific language governing permissions and limitations under
       the License.
       -->
-    <string name="app_name">AndroidDevChallenge</string>
+    <string name="app_name">Boji</string>
     <string name="lorem_ipsum">
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Scelerisque viverra mauris in aliquam sem. Aenean sed adipiscing diam donec adipiscing. Et malesuada fames ac turpis egestas integer. Dui faucibus in ornare quam viverra orci sagittis eu. Pharetra vel turpis nunc eget lorem dolor sed viverra. Neque aliquam vestibulum morbi blandit cursus risus at. Pellentesque elit eget gravida cum sociis natoque penatibus et. Ultricies mi eget mauris pharetra et ultrices neque ornare aenean. Ultricies tristique nulla aliquet enim tortor. Eget nunc lobortis mattis aliquam faucibus. Sit amet tellus cras adipiscing. Lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi. Amet cursus sit amet dictum sit amet justo.
 \n\nUt tellus elementum sagittis vitae et leo duis. Cursus eget nunc scelerisque viverra mauris in aliquam sem. Sed elementum tempus egestas sed sed risus pretium. Eget nunc lobortis mattis aliquam faucibus purus in massa tempor. Faucibus in ornare quam viverra orci sagittis eu. Volutpat odio facilisis mauris sit amet massa vitae tortor. Felis eget velit aliquet sagittis id consectetur purus ut faucibus. Ut morbi tincidunt augue interdum velit euismod in. Ornare aenean euismod elementum nisi quis eleifend. In cursus turpis massa tincidunt dui ut ornare lectus sit. Quisque non tellus orci ac auctor augue mauris augue. Nunc id cursus metus aliquam eleifend mi in nulla.
